core/domain/src/main/java/com/example/core/domain/util/error/EmailError.kt
package com.example.core.domain.util.error

enum class EmailError: RootError {
    INVALID_EMAIL,
    BLANK_FIELD
}